[gd_scene load_steps=2 format=3 uid="uid://iaya80l5cgns"]

[ext_resource type="Script" uid="uid://c2h68427xtg5n" path="res://Scenes/Levels/MainMenuScene/level_button.gd" id="1_j0imj"]

[node name="LevelButton" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j0imj")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -241.0
offset_bottom = 648.0
grow_horizontal = 0

[node name="Level" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
text = "Level 01"

[node name="Level2" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
text = "Level 02"

[node name="Level3" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
text = "Level 03"

[node name="Level4" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
text = "Level 04"

[connection signal="pressed" from="VBoxContainer/Level" to="." method="_on_level_pressed"]
[connection signal="pressed" from="VBoxContainer/Level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Level3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="VBoxContainer/Level4" to="." method="_on_level_4_pressed"]
